레이어팝업 전화번호입력부분 수정 통신사별 페이지 등록자 이름으로나오도록 수정

--- a/src/main/resources/templates/page/carr-mntrt-manage.html
+++ b/src/main/resources/templates/page/carr-mntrt-manage.html
@@ -101,7 +101,7 @@
                                 <td class="alignC">{{mntrt.pnMntData}}</td>
                                 <td class="alignC">{{mntrt.pnMntCall}}</td>
                                 <td class="alignC">{{mntrt.pnMntSms}}</td>
-                                <td class="alignC" v-if="mntrt.amdMbrId">{{mntrt.amdMbrId}}</td>
+                                <td class="alignC" v-if="mntrt.amdMbrId">{{mntrt.amdMbrNm}}</td>
                                 <td class="alignC" v-else>-</td>
                                 <td class="alignC" v-if="mntrt.amdDt">{{mntrt.amdDt}}</td>
                                 <td class="alignC" v-else>-</td>
