--- a/src/main/resources/templates/page/service-status.html
+++ b/src/main/resources/templates/page/service-status.html
@@ -355,7 +355,7 @@
                             <th>개통번호</th>
                             <td>
                                 <input class="wPer" type="text" id="mbrPnNo"
-                                       placeholder="'-'없이 숫자 10-11자리 입력" v-model="rsltToReg.mbrPnNo"
+                                       placeholder="'-'없이 숫자 10-11자리 입력" v-model="rsltToReg.regMbrPnNo"
                                        @input="setMbrPnNo($event.target.value)" :disabled='modiCallStCd==="E"'>
                             </td>
                         </tr>
@@ -700,6 +700,8 @@
                         this.selectedCs = {}
                         this.selectedCs = data
                         this.selectedCs.idx = idx
+                        this.selectedCs.regMbrPnNo = this.getMbrPnNo(this.selectedCs.regMbrPnNo)
+
                         this.selectedMkr = this.selectedCs.regPnMkr
                         this.rsltToReg = JSON.parse(JSON.stringify(data))
                         this.modiCallStCd = this.rsltToReg.callStCd
@@ -858,11 +860,16 @@
                             regType: this.rsltToReg.regType,
                             regMntRtNo: this.rsltToReg.regMntRtNo,
                             regPnMdlNo: this.rsltToReg.regPnMdlNo,
+                            regExtServYn: this.rsltToReg.regExtServYn,
                             regPd: this.rsltToReg.regPd,
                             callCont: this.rsltToReg.callCont,
                             dealCont: this.rsltTxt,
                             pnRegYn: 'Y',
                             callNo: this.rsltToReg.callNo
+                        }
+                        if (param.regMbrPnNo.length <= 10){
+                            alert('개통번호를 확인해주세요.')
+                            return
                         }
                         if (param.regCarr === 'all') {
                             alert('통신사를 선택해주세요.')
@@ -897,15 +904,15 @@
                             clMbrId: this.rsltToReg.clMbrId
                         }
                     }
-
-
                     // 확인필요
                     if (this.rsltTxt.length === 0) {
                         alert('특이사항또는 블랙사유를 입력해주세요.')
                         return
                     }
                     if (confirm('개통결과를 수정하시겠습니까?')) {
-                        console.log(param)
+                        if (this.modiCallStCd === 'T'){
+                            param.regMbrPnNo = param.regMbrPnNo.replaceAll('-', '')
+                        }
                         cf_call("/service/registerRslt", param, this.registerRsltCB)
                     }
 
@@ -913,8 +920,6 @@
                 registerRsltCB: function (data) {
                     if (data.succ === "Y") {
                         alert('결과가 수정되었습니다.')
-                        // this.visitHH = "all"
-                        // this.visitMM = "all"
                         $('#popLayerServiceResultAdd').popup("hide");
                         this.modiCall = false
                         this.getBnMbrList()
@@ -942,23 +947,34 @@
                         this.blackYn = false
                     }
                 },
+                getMbrPnNo: function(val){
+                    var formatPnNo = ''
+                    if (val !== undefined) {
+                        if (val.length === 10) {
+                            formatPnNo = val.substring(0, 3) + '-' + val.substring(3, 6) + '-' + val.substring(6, 10)
+                        } else if (val.length === 11) {
+                            formatPnNo = val.substring(0, 3) + '-' + val.substring(3, 7) + '-' + val.substring(7, 11)
+                        }
+                    }
+                    return formatPnNo
+                },
                 setMbrPnNo: function(val) {
                     var newChar = val.slice(-1)
                     var newNo = val.replaceAll('-', '')
                     if (/\d/.test(newChar)) {
                         if (newNo.length === 10) {
-                            this.rsltToReg.mbrPnNo = newNo.substring(0, 3) + '-' + newNo.substring(3, 6) + '-' + newNo.substring(6, 10)
+                            this.rsltToReg.regMbrPnNo = newNo.substring(0, 3) + '-' + newNo.substring(3, 6) + '-' + newNo.substring(6, 10)
                         } else if (newNo.length === 11) {
-                            this.rsltToReg.mbrPnNo = newNo.substring(0, 3) + '-' + newNo.substring(3, 7) + '-' + newNo.substring(7, 11)
+                            this.rsltToReg.regMbrPnNo = newNo.substring(0, 3) + '-' + newNo.substring(3, 7) + '-' + newNo.substring(7, 11)
                         } else if (newNo.length >= 12 ) {
-                            this.rsltToReg.mbrPnNo = newNo.substring(0, 3) + '-' + newNo.substring(3, 7) + '-' + newNo.substring(7, 11)
+                            this.rsltToReg.regMbrPnNo = newNo.substring(0, 3) + '-' + newNo.substring(3, 7) + '-' + newNo.substring(7, 11)
                         } else {
-                            this.rsltToReg.mbrPnNo = newNo
+                            this.rsltToReg.regMbrPnNo = newNo
                         }
-                        $('#mbrPnNo')[0].value = this.rsltToReg.mbrPnNo
+                        $('#mbrPnNo')[0].value = this.rsltToReg.regMbrPnNo
                     } else {
-                        this.mktEdit.mbrPnNo = this.mktEdit.mbrPnNo.substring(0, this.mktEdit.mbrPnNo.length)
-                        $('#mbrPnNo')[0].value = this.mktEdit.mbrPnNo
+                        this.rsltToReg.regMbrPnNo = this.rsltToReg.regMbrPnNo.substring(0, this.rsltToReg.regMbrPnNo.length)
+                        $('#mbrPnNo')[0].value = this.rsltToReg.regMbrPnNo
                     }
                 }
             }
