--- a/src/main/resources/templates/page/carr-deal-manage.html
+++ b/src/main/resources/templates/page/carr-deal-manage.html
@@ -219,7 +219,7 @@
                                     <td class="alignC" @click="rowClick(sell,idx)">{{sell.pnStor}}GB</td>
                                     <td class="alignC" @click="rowClick(sell,idx)">{{sell.pnMdlNo}}</td>
                                     <td class="alignC" v-if="!sell.lastModiMbr" @click="rowClick(sell,idx)">-</td>
-                                    <td class="alignC" v-else @click="rowClick(sell,idx)">{{sell.lastModiMbr}}</td>
+                                    <td class="alignC" v-else @click="rowClick(sell,idx)">{{sell.lastModiMbrNm}}</td>
                                     <td class="alignC" v-if="!sell.lastModiDate" @click="rowClick(sell,idx)">-</td>
                                     <td class="alignC" v-else @click="rowClick(sell,idx)">{{sell.lastModiDate}}</td>
                                 </tr>
