--- a/src/main/resources/templates/page/service-marketing.html
+++ b/src/main/resources/templates/page/service-marketing.html
@@ -387,7 +387,8 @@
                             <th>요금제</th>
                             <td colspan="3">
                                 <select class="wPer" id="selMonthlyRate" v-model="mktEdit.pnMntRtNo">
-                                    <option v-if="monthlyRateList.length" value="-1">- 요금제를 선택하세요 -</option>
+                                    <option v-if="mntRtNull" value="-1">- 해당 요금제는 현재 판매중단 되었습니다 -</option>
+                                    <option v-else-if="monthlyRateList.length" value="-1">- 요금제를 선택하세요 -</option>
                                     <option v-else value="-1">- 통신사 선택 후 선택 가능 -</option>
                                     <option v-for="(plan, index) in monthlyRateList" :value="plan.pnMntRtNo">{{ plan.pnMntRtNm }} [월 {{ addCommaToPrice(plan.pnMntAmt) }}원]</option>
                                 </select>
@@ -782,6 +783,7 @@
                             this.mktEdit.pnMdl = this.mktOne.pnMdl
                             this.mktEdit.mktCmnt = this.mktOne.mktCmnt
                             this.getMonthlyRate(this.mktEdit.pnCarr)
+                            if (this.mntRtNull) this.mktEdit.pnMntRtNo = -1
                         } else if (mode == 'new') {
                             this.initMktEditInfo()
                         } else {
@@ -826,6 +828,13 @@
                         + '-' + ((this.editDate.getMonth() + 1) + "").padStart(2, '0')
                         + '-' + this.editDate.getDate()
                         + ' ' + this.editHour + ':' + this.editMin + ':00'
+                },
+                mntRtNull: function() {
+                    var boolMntRtNull = true
+                    for (var i=0; i < this.monthlyRateList.length; i++) {
+                        if (this.monthlyRateList.pnMntRtNo === this.mktEdit.pnMntRtNo) boolMntRtNull = false
+                    }
+                    return boolMntRtNull
                 },
                 mbrPnNoND: function() {
                     return this.mktEdit.mbrPnNo.replaceAll('-', '')
