--- a/src/main/resources/templates/page/shop-manage.html
+++ b/src/main/resources/templates/page/shop-manage.html
@@ -390,8 +390,12 @@
                     }
                 },
                 getImagePath: function(fileTgt, fileName) {
-                    if (fileName !== undefined) {
+                    if (fileName !== undefined && fileName !== null && fileName !== '') {
                         return '/imageSrc?fileName=' + fileName
+                    } else {
+                        if (fileTgt === 'shopimg') {
+                            return '/images/shop/bnimg/shop.png'
+                        }
                     }
                 }
             },
